Bug 9120 - sysfs latency_timer for FT232RL chip
Summary: sysfs latency_timer for FT232RL chip
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: USB (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Alan
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-10-03 12:13 UTC by Rui Guerreiro
Modified: 2009-06-02 14:39 UTC (History)
0 users

See Also:
Kernel Version: 2.6.22.9
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Rui Guerreiro 2007-10-03 12:13:32 UTC
Most recent kernel where this bug did not occur: 2.6.18.1, maybe later versions (could not check)
Distribution: All
Hardware Environment: FTDI FT232RL based dongle for serial communication
Software Environment:
Problem Description:
The driver does not create the sysfs' latency_timer file for FT232RL chips (only for FT232BM and FT232C chips).
Older versions used to detect this same chip as a FT232BM compatible chip, and the latency_timer was correctly set.

Steps to reproduce:
insert a FT232RL based device on a USB plug.
Comment 1 Greg Kroah-Hartman 2007-10-03 12:54:33 UTC
This should be fixed in the 2.6.23-rc kernels, can you test there?
Comment 2 Rui Guerreiro 2007-10-04 04:16:32 UTC
Hi,
Maybe you forgot to change remove_sysfs_attrs ?

Do you see any incovenient on automagically set the latency_timer value to 2ms
(or anything around this), whenever the ASYNC_LOW_LATENCY flag is set on the
TIOCSSERIAL ioctl (set_serial_info)?
This would allow for a unified API with the "regular" UARTs, and people could
continue to use "setserial /dev/ttyUSB0 low_latency" instead of having to
fiddle around with sysfs params.

Note You need to log in before you can comment on or make changes to this bug.